--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
   <section class="products-container">
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/LGWhasingMachine.webp" alt="Washing Machine">
+      <img src="images/LGWhasingMachine.webp" alt="Washing Machine">
       <h3>LG 7kg Front Load Washing Machine</h3>
       <div class="price-rating">
         <span>₹25,999</span>
@@ -186,7 +186,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/81HEdcXd0jL._AC_UF1000,1000_QL80_.jpg" alt="Refrigerator">
+      <img src="images/81HEdcXd0jL._AC_UF1000,1000_QL80_.jpg" alt="Refrigerator">
       <h3>Samsung 253L 3 Star Double Door</h3>
       <div class="price-rating">
         <span>₹32,499</span>
@@ -196,7 +196,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/IFBMicrowaveOvan.jpg" alt="Microwave">
+      <img src="images/IFBMicrowaveOvan.jpg" alt="Microwave">
       <h3>IFB 30L Convection Microwave Oven</h3>
       <div class="price-rating">
         <span>₹7,990</span>
@@ -206,7 +206,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/VoltasAC.jpg" alt="Air Conditioner">
+      <img src="images/VoltasAC.jpg" alt="Air Conditioner">
       <h3>Voltas 1.5 Ton 3 Star Inverter AC </h3>
       <div class="price-rating">
         <span>₹36,999</span>
@@ -217,7 +217,7 @@
   </section>
     <section class="products-container">
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/81gLmmQBIwL._SY679.jpg" alt="Washing Machine">
+      <img src="images/81gLmmQBIwL._SY679.jpg" alt="Washing Machine">
       <h3>Samsung 6.5kg Top Load Washing Machine</h3>
       <div class="price-rating">
         <span>₹17,999</span>
@@ -227,7 +227,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/LGFridge.jpg" alt="Refrigerator">
+      <img src="images/LGFridge.jpg" alt="Refrigerator">
       <h3>LG 260L Double Door Fridge</h3>
       <div class="price-rating">
         <span>₹24,999</span>
@@ -237,7 +237,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/SamsungOvejn.jpg" alt="Microwave">
+      <img src="images/SamsungOvejn.jpg" alt="Microwave">
       <h3>Samsung 28L Convection </h3>
       <div class="price-rating">
         <span>₹9,989</span>
@@ -247,7 +247,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/BlueStarWaterPurifier.jpg" alt="Water Purifier">
+      <img src="images/BlueStarWaterPurifier.jpg" alt="Water Purifier">
       <h3>Blue Star RO+UV Water Purifier</h3>
       <div class="price-rating">
         <span>₹14,940</span>
@@ -258,7 +258,7 @@
   </section>
     <section class="products-container">
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/Whirlpool WashingMachine.jpg" alt="Washing Machine">
+      <img src="images/Whirlpool WashingMachine.jpg" alt="Washing Machine">
       <h3>Whirlpool 7.5kg Semi Automatic</h3>
       <div class="price-rating">
         <span>₹11,499</span>
@@ -268,7 +268,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/WhirlpoolFridge.jpg" alt="Refrigerator">
+      <img src="images/WhirlpoolFridge.jpg" alt="Refrigerator">
       <h3>Whirlpool 190L Single Door</h3>
       <div class="price-rating">
         <span>₹14,999</span>
@@ -278,7 +278,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/LgOven.jpg" alt="Microwave">
+      <img src="images/LgOven.jpg" alt="Microwave">
       <h3>LG 20L Solo Microwave </h3>
       <div class="price-rating">
         <span>₹5,499</span>
@@ -288,7 +288,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/fine-blend-mixer-webp" alt="Grinder">
+      <img src="images/fine-blend-mixer-webp" alt="Grinder">
       <h3>Philips Mixer Grinder 750W</h3>
       <div class="price-rating">
         <span>₹6,640</span>
@@ -299,7 +299,7 @@
   </section>
       <section class="products-container">
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/DishWasher.jpg" alt="Dishwasher">
+      <img src="images/DishWasher.jpg" alt="Dishwasher">
       <h3>Bosch Dishwasher 12 Place</h3>
       <div class="price-rating">
         <span>₹58,930</span>
@@ -309,7 +309,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/HavellsFan.jpg" alt="Fan">
+      <img src="images/HavellsFan.jpg" alt="Fan">
       <h3>Havells 1200mm Ceiling Fan</h3>
       <div class="price-rating">
         <span>₹2,905</span>
@@ -319,7 +319,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/UshaWaterHeater.jpg" alt="Water Heater">
+      <img src="images/UshaWaterHeater.jpg" alt="Water Heater">
       <h3>Usha Water Heater 15L </h3>
       <div class="price-rating">
         <span>₹9,130</span>
@@ -329,7 +329,7 @@
     </div>
 
     <div class="product-card">
-      <img src="/home/manisarathis/Downloads/fine-blend-mixer-webp" alt="Cooktop">
+      <img src="images/fine-blend-mixer-webp" alt="Cooktop">
       <h3>Prestige Induction Cooktop</h3>
       <div class="price-rating">
         <span>₹4,150</span>
