--- a/index.html
+++ b/index.html
@@ -360,10 +360,11 @@
 					.formsubmit.zcwf_button{
 						color: white !important;
 						background: transparent linear-gradient(0deg, #0279FF 0%, #00A3F3 100%);
+						width:200px;
 					}
 					#crmWebToEntityForm.zcwf_lblLeft{
 						width: 100%;
-						padding: 0px;
+						padding: 10px;
 						margin: 0 auto;
 						box-sizing: border-box;
 					}
