--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@
 
   <section class="products-container">
     <div class="product-card">
-      <img src="images/LGWhasingMachine.webp" alt="Washing Machine">
+      <img src="/home/manisarathis/Downloads/LGWhasingMachine.webp" alt="Washing Machine">
       <h3>LG 7kg Front Load Washing Machine</h3>
       <div class="price-rating">
         <span>₹25,999</span>
@@ -186,7 +186,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/81HEdcXd0jL._AC_UF1000,1000_QL80_.jpg" alt="Refrigerator">
+      <img src="/home/manisarathis/Downloads/81HEdcXd0jL._AC_UF1000,1000_QL80_.jpg" alt="Refrigerator">
       <h3>Samsung 253L 3 Star Double Door</h3>
       <div class="price-rating">
         <span>₹32,499</span>
@@ -196,7 +196,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/IFBMicrowaveOvan.jpg" alt="Microwave">
+      <img src="/home/manisarathis/Downloads/IFBMicrowaveOvan.jpg" alt="Microwave">
       <h3>IFB 30L Convection Microwave Oven</h3>
       <div class="price-rating">
         <span>₹7,990</span>
@@ -206,7 +206,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/VoltasAC.jpg" alt="Air Conditioner">
+      <img src="/home/manisarathis/Downloads/VoltasAC.jpg" alt="Air Conditioner">
       <h3>Voltas 1.5 Ton 3 Star Inverter AC </h3>
       <div class="price-rating">
         <span>₹36,999</span>
@@ -217,7 +217,7 @@
   </section>
     <section class="products-container">
     <div class="product-card">
-      <img src="images/81gLmmQBIwL._SY679.jpg" alt="Washing Machine">
+      <img src="/home/manisarathis/Downloads/81gLmmQBIwL._SY679.jpg" alt="Washing Machine">
       <h3>Samsung 6.5kg Top Load Washing Machine</h3>
       <div class="price-rating">
         <span>₹17,999</span>
@@ -227,7 +227,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/LGFridge.jpg" alt="Refrigerator">
+      <img src="/home/manisarathis/Downloads/LGFridge.jpg" alt="Refrigerator">
       <h3>LG 260L Double Door Fridge</h3>
       <div class="price-rating">
         <span>₹24,999</span>
@@ -237,7 +237,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/SamsungOvejn.jpg" alt="Microwave">
+      <img src="/home/manisarathis/Downloads/SamsungOvejn.jpg" alt="Microwave">
       <h3>Samsung 28L Convection </h3>
       <div class="price-rating">
         <span>₹9,989</span>
@@ -247,7 +247,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/BlueStarWaterPurifier.jpg" alt="Water Purifier">
+      <img src="/home/manisarathis/Downloads/BlueStarWaterPurifier.jpg" alt="Water Purifier">
       <h3>Blue Star RO+UV Water Purifier</h3>
       <div class="price-rating">
         <span>₹14,940</span>
@@ -258,7 +258,7 @@
   </section>
     <section class="products-container">
     <div class="product-card">
-      <img src="images/Whirlpool WashingMachine.jpg" alt="Washing Machine">
+      <img src="/home/manisarathis/Downloads/Whirlpool WashingMachine.jpg" alt="Washing Machine">
       <h3>Whirlpool 7.5kg Semi Automatic</h3>
       <div class="price-rating">
         <span>₹11,499</span>
@@ -268,7 +268,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/WhirlpoolFridge.jpg" alt="Refrigerator">
+      <img src="/home/manisarathis/Downloads/WhirlpoolFridge.jpg" alt="Refrigerator">
       <h3>Whirlpool 190L Single Door</h3>
       <div class="price-rating">
         <span>₹14,999</span>
@@ -278,7 +278,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/LgOven.jpg" alt="Microwave">
+      <img src="/home/manisarathis/Downloads/LgOven.jpg" alt="Microwave">
       <h3>LG 20L Solo Microwave </h3>
       <div class="price-rating">
         <span>₹5,499</span>
@@ -288,7 +288,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/fine-blend-mixer-webp" alt="Grinder">
+      <img src="/home/manisarathis/Downloads/fine-blend-mixer-webp" alt="Grinder">
       <h3>Philips Mixer Grinder 750W</h3>
       <div class="price-rating">
         <span>₹6,640</span>
@@ -299,7 +299,7 @@
   </section>
       <section class="products-container">
     <div class="product-card">
-      <img src="images/DishWasher.jpg" alt="Dishwasher">
+      <img src="/home/manisarathis/Downloads/DishWasher.jpg" alt="Dishwasher">
       <h3>Bosch Dishwasher 12 Place</h3>
       <div class="price-rating">
         <span>₹58,930</span>
@@ -309,7 +309,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/HavellsFan.jpg" alt="Fan">
+      <img src="/home/manisarathis/Downloads/HavellsFan.jpg" alt="Fan">
       <h3>Havells 1200mm Ceiling Fan</h3>
       <div class="price-rating">
         <span>₹2,905</span>
@@ -319,7 +319,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/UshaWaterHeater.jpg" alt="Water Heater">
+      <img src="/home/manisarathis/Downloads/UshaWaterHeater.jpg" alt="Water Heater">
       <h3>Usha Water Heater 15L </h3>
       <div class="price-rating">
         <span>₹9,130</span>
@@ -329,7 +329,7 @@
     </div>
 
     <div class="product-card">
-      <img src="images/fine-blend-mixer-webp" alt="Cooktop">
+      <img src="/home/manisarathis/Downloads/fine-blend-mixer-webp" alt="Cooktop">
       <h3>Prestige Induction Cooktop</h3>
       <div class="price-rating">
         <span>₹4,150</span>
@@ -338,7 +338,12 @@
       <button>Add to Cart</button>
     </div>
   </section>
-<div id = 'crmWebToEntityForm' class = 'zcwf_lblLeft crmWebToEntityForm' style = 'background-color: white;color: black;max-width: 600px;'>
+  <!-- Note :
+   - You can modify the font style and form style to suit your website. 
+   - Code lines with comments Do not remove this code are required for the form to work properly, make sure that you do not remove these lines of code. 
+   - The Mandatory check script can modified as to suit your business needs. 
+   - It is important that you test the modified form before going live.-->
+<div id = 'crmWebToEntityForm' class = 'zcwf_lblLeft crmWebToEntityForm' style = 'background-color: transparent;color: black;max-width: 1000px;margin-left:28%;'>
 	<meta name = 'viewport' content = 'width=device-width, initial-scale=1.0'>
 		<META HTTP-EQUIV = 'content-type' CONTENT = 'text/html;charset=UTF-8'>
 			<form id = 'webform926237000000707224' action = 'https://crm.zoho.in/crm/WebToLeadForm' name = WebToLeads926237000000707224 method = 'POST' onSubmit = 'javascript:document.charset="UTF-8"; return checkMandatory926237000000707224()' accept-charset = 'UTF-8'>
@@ -353,7 +358,7 @@
 				<input type = 'text' style = 'display:none;' name = 'returnURL' value = 'null'>
 				</input>
 				<!-- Do not remove this code. -->
-					<style>
+				<style>
 					html,body{
 						margin: 0px;
             width: 100%;
@@ -538,10 +543,9 @@
 					}
 					}
 				</style>
-		
-				<div class = 'zcwf_title' style = 'max-width: 600px;color: black; font-family:Arial;'>
+				<div class = 'zcwf_title' style = 'max-width: 800px; font-size:30px; color:black; font-family:Arial;'>
 					Lead Creation
-				</div>
+				</div>                                           
 				<div class = 'zcwf_row'>
 					<div class = 'zcwf_col_lab' style = 'font-size:12px; font-family: Arial;'>
 						<label for = 'First_Name'>
@@ -549,7 +553,7 @@
 						</label>
 					</div>
 					<div class = 'zcwf_col_fld'>
-						<input type = 'text' id = 'First_Name' aria-required = 'false' aria-label = 'First Name' name = 'First Name' aria-valuemax = '40' maxlength = '40'>
+						<input type = 'text' id = 'First_Name' aria-required = 'false' aria-label = 'First Name' name = 'First Name' aria-valuemax = '40' maxlength = '40' font-family='Arial'>
 						</input>
 						<div class = 'zcwf_col_help'>
 						</div>
@@ -617,7 +621,7 @@
 						</label>
 					</div>
 					<div class = 'zcwf_col_fld'>
-						<select class = 'zcwf_col_fld_slt' role = 'combobox' aria-expanded = 'false' aria-haspopup = 'listbox' id = 'Industry' onChange = 'addAriaSelected926237000000707224()' aria-required = 'false' aria-label = 'Industry' name = 'Industry'>
+						<select class = 'zcwf_col_fld_slt' role = 'combobox' aria-expanded = 'false' aria-haspopup = 'listbox' id = 'Industry' onChange = 'addAriaSelected926237000000707224()' aria-required = 'false' aria-label = 'Industry' name = 'Industry' >
 							<option value = '-None-'>
 								-None-
 							</option>
@@ -689,10 +693,10 @@
 									</label>
 								</div>
 							</div>
-							<div class = 'dIB zcwf_privacy_txt' style = 'font-size: 12px;font-family:Arial;color: black;'>
+							<div class = 'dIB zcwf_privacy_txt' style = 'font-size: 17px;font-family:Arial;color: black;'>
 								I agree to the Privacy Policy and Terms of Service.
 							</div>
-							<div id = 'privacyErr926237000000707224' aria-live = 'polite' style = 'font-size:12px;color:red;padding-left: 5px;visibility:hidden;'>
+							<div id = 'privacyErr926237000000707224' aria-live = 'polite' style = 'font-size:17px;color:red;padding-left: 5px;visibility:hidden;'>
 								Please accept this
 							</div>
 						</div>
